--- a/app/sass/_$3mobile.scss
+++ b/app/sass/_$3mobile.scss
@@ -361,6 +361,10 @@
     }
   }
 
+  .order-cart-table .total {
+    padding: 25px 5px 20px;
+  }
+
   .order-cart-table__item--prop {
     padding-top: 5px;
     padding-left: 5px;
